--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,20 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags "-fexceptions"
-                //abiFilters "armeabi"
+                cppFlags "-fexceptions","-llog"
+                abiFilters "armeabi"
+
             }
         }
+//        ndk {
+//            moduleName "fmod-lib"
+//            ldLibs "log"
+//        }
+//        ndk {
+//            moduleName "app"
+//            ldLibs "log"//实现__android_log_print
+//            abiFilters "armeabi", "armeabi-v7a", "x86"
+//        }
     }
 
     sourceSets {
@@ -38,7 +48,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/fmod.jar')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
