FmodActivity完成,基本功能可用

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -7,8 +7,8 @@
 cmake_minimum_required(VERSION 3.4.1)
 
 #配置工程路径
-#set(path_project /home/wuhuannan/AndroidPrj/VoiceChange)
-set(path_project E:/workspace_ndk/NdkStudy)
+set(path_project /Users/admin/Documents/e/workspace_ndk/NdkStudy)
+#set(path_project E:/workspace_ndk/NdkStudy)
 
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
@@ -72,10 +72,10 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       study-lib
+                       ## study-lib
+                       fmod-lib
                        fmodL
                        fmod
-                       fmod-lib
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib}
