--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-fexceptions","-llog"
-                abiFilters "armeabi"
+                abiFilters "armeabi","armeabi-v7a","arm64-v8a","x86"
 
             }
         }
