--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -25,6 +25,12 @@ add_library( # Sets the name of the library. so库名称
              src/main/cpp/study-lib.cpp )
 
  add_library(
+             cStudy
+             SHARED
+             src/main/cpp/cstudy/cStudy.cpp
+            )
+
+ add_library(
               fmod-lib
               SHARED
               src/main/cpp/fmod/fmod-lib.cpp )
@@ -83,3 +89,4 @@ target_link_libraries( # Specifies the target library.
 
 #配置头文件的包含路径
 include_directories(${path_project}/app/src/main/cpp/fmod)
+include_directories(${path_project}/app/src/main/cpp/cstudy)
