--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
 
         <activity android:name=".activity.HelloActivity" />
 
+        <activity android:name=".activity.CStudyActivity" />
+
         <activity android:name=".activity.FmodActivity" />
 
     </application>
