--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
 
         <activity android:name=".activity.CStudyActivity" />
 
+        <activity android:name=".activity.JniStudyActivity" />
+
         <activity android:name=".activity.FmodActivity" />
 
     </application>
