--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -37,6 +37,12 @@ add_library( # Sets the name of the library. so库名称
             )
 
  add_library(
+             cPlusStudy
+             SHARED
+             src/main/cpp/cplusstudy/cPlusStudy.cpp
+            )
+
+ add_library(
               fmod-lib
               SHARED
               src/main/cpp/fmod/fmod-lib.cpp )
@@ -96,4 +102,5 @@ target_link_libraries( # Specifies the target library.
 #配置头文件的包含路径
 include_directories(${path_project}/app/src/main/cpp/cstudy)
 include_directories(${path_project}/app/src/main/cpp/jnistudy)
+include_directories(${path_project}/app/src/main/cpp/cplusstudy)
 include_directories(${path_project}/app/src/main/cpp/fmod)
