--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
 
         <activity android:name=".activity.FmodActivity" />
 
+        <activity android:name=".activity.PlayerStudyActivity" />
+
     </application>
 
 </manifest>
